<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_root"
    android:orientation="horizontal">

    <!-- Левый постоянный сайдбар (Persistent Sidebar) -->
    <LinearLayout
        android:id="@+id/sidebar_container"
        android:layout_width="@dimen/sidebar_width"
        android:layout_height="match_parent"
        android:background="@color/bg_sidebar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <!-- Логотип приложения -->
        <ImageView
            android:id="@+id/sidebar_logo"
            android:layout_width="@dimen/sidebar_logo_size"
            android:layout_height="@dimen/sidebar_logo_size"
            android:layout_marginBottom="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_mark" />

        <!-- Пункт: Поиск -->
        <FrameLayout
            android:id="@+id/nav_item_search"
            android:layout_width="@dimen/sidebar_item_size"
            android:layout_height="@dimen/sidebar_item_size"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_sidebar_item"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <View
                android:id="@+id/nav_indicator_search"
                android:layout_width="3.5dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:background="@color/accent_purple"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/nav_icon_search"
                android:layout_width="@dimen/sidebar_icon_size"
                android:layout_height="@dimen/sidebar_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_search"
                android:src="@drawable/ic_nav_search" />
        </FrameLayout>

        <!-- Пункт: Главная -->
        <FrameLayout
            android:id="@+id/nav_item_home"
            android:layout_width="@dimen/sidebar_item_size"
            android:layout_height="@dimen/sidebar_item_size"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_sidebar_item"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <View
                android:id="@+id/nav_indicator_home"
                android:layout_width="3.5dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:background="@color/accent_purple"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/nav_icon_home"
                android:layout_width="@dimen/sidebar_icon_size"
                android:layout_height="@dimen/sidebar_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_home"
                android:src="@drawable/ic_nav_home" />
        </FrameLayout>

        <!-- Пункт: Мой список -->
        <FrameLayout
            android:id="@+id/nav_item_mylist"
            android:layout_width="@dimen/sidebar_item_size"
            android:layout_height="@dimen/sidebar_item_size"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_sidebar_item"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <View
                android:id="@+id/nav_indicator_mylist"
                android:layout_width="3.5dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:background="@color/accent_purple"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/nav_icon_mylist"
                android:layout_width="@dimen/sidebar_icon_size"
                android:layout_height="@dimen/sidebar_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_mylist"
                android:src="@drawable/ic_nav_mylist" />
        </FrameLayout>

        <!-- Пункт: Онлайн ТВ -->
        <FrameLayout
            android:id="@+id/nav_item_livetv"
            android:layout_width="@dimen/sidebar_item_size"
            android:layout_height="@dimen/sidebar_item_size"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_sidebar_item"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <View
                android:id="@+id/nav_indicator_livetv"
                android:layout_width="3.5dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:background="@color/accent_purple"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/nav_icon_livetv"
                android:layout_width="@dimen/sidebar_icon_size"
                android:layout_height="@dimen/sidebar_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_livetv"
                android:src="@drawable/ic_nav_livetv" />
        </FrameLayout>

        <!-- Пункт: Приложения -->
        <FrameLayout
            android:id="@+id/nav_item_apps"
            android:layout_width="@dimen/sidebar_item_size"
            android:layout_height="@dimen/sidebar_item_size"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_sidebar_item"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <View
                android:id="@+id/nav_indicator_apps"
                android:layout_width="3.5dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:background="@color/accent_purple"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/nav_icon_apps"
                android:layout_width="@dimen/sidebar_icon_size"
                android:layout_height="@dimen/sidebar_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_apps"
                android:src="@drawable/ic_nav_apps" />
        </FrameLayout>

        <!-- Разделитель (выталкивает настройки вниз) -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Пункт: Настройки (внизу) -->
        <FrameLayout
            android:id="@+id/nav_item_settings"
            android:layout_width="@dimen/sidebar_item_size"
            android:layout_height="@dimen/sidebar_item_size"
            android:background="@drawable/bg_sidebar_item"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <View
                android:id="@+id/nav_indicator_settings"
                android:layout_width="3.5dp"
                android:layout_height="24dp"
                android:layout_gravity="start|center_vertical"
                android:background="@color/accent_purple"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/nav_icon_settings"
                android:layout_width="@dimen/sidebar_icon_size"
                android:layout_height="@dimen/sidebar_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_settings"
                android:src="@drawable/ic_nav_settings" />
        </FrameLayout>

    </LinearLayout>

    <!-- Основной контейнер содержимого (Fragments) -->
    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bg_root" />

</LinearLayout>
